# bevy-demo

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/demo/: day.ase  night.ase
examples/: demo.rs
script/: generate_lut.py
src/: background.rs  background.wgsl  camera.rs  lib.rs  light2d.rs  moveable.rs  shelter.rs
src/background/: mod.rs
src/collision/: mod.rs  moveable.rs  selectable.rs
src/light2d/: freeform.rs  freeform.wgsl  mod.rs  overlay.rs  overlay.wgsl  point.rs  point.wgsl  sprite.rs  sprite.wgsl
src/outline/: mod.rs  outline.wgsl
src/shelter/: cameras.rs  day_cycle.rs  debug.rs  mod.rs  path_find.rs  path_finder.rs  person.rs  shelter.rs  util.rs
src/unused/: point_light.wgsl
