[package]
name = "bevy-demo"
version = "0.1.0"
authors = ["FishHawk <whang23@outlook.com>"]
edition = "2021"
description = "A game demo using the bevy engine."
readme = "README.md"
license = "MIT"
repository = "https://github.com/FishHawk/bevy-demo"
categories = ["game-development", "games"]
keywords = ["bevy", "gamedev", "parallax", "scrolling", "background"]
exclude = ["assets/*"]

[dependencies]
serde = "1.0.180"
bevy = { version = "0.11.1", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.22.0", features = [ "simd-stable", "debug-render-2d" ] }
petgraph = "0.6.3"
itertools = "0.11.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
